parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    DO

Grammar

Rule 0     S' -> program
Rule 1     program -> class_decl program
Rule 2     program -> empty
Rule 3     empty -> <empty>
Rule 4     class_decl -> CLASS ID found_class_name extends_class LCURLY class_body_decl RCURLY
Rule 5     found_class_name -> <empty>
Rule 6     extends_class -> EXTENDS ID
Rule 7     extends_class -> empty
Rule 8     class_body_decl -> class_body_decl_type class_body_decl
Rule 9     class_body_decl -> class_body_decl_type
Rule 10    class_body_decl_type -> field_decl
Rule 11    class_body_decl_type -> method_decl
Rule 12    class_body_decl_type -> constructor_decl
Rule 13    field_decl -> modifier var_decl
Rule 14    modifier -> visibility optional_static
Rule 15    visibility -> PUBLIC
Rule 16    visibility -> PRIVATE
Rule 17    visibility -> empty
Rule 18    optional_static -> STATIC
Rule 19    optional_static -> empty
Rule 20    var_decl -> type variables SEMICOLON
Rule 21    type -> INT
Rule 22    type -> FLOAT
Rule 23    type -> BOOLEAN
Rule 24    type -> VOID
Rule 25    type -> NULL
Rule 26    type -> ID
Rule 27    variables -> variable additional_vars
Rule 28    variable -> ID
Rule 29    additional_vars -> COMMA variable additional_vars
Rule 30    additional_vars -> empty
Rule 31    method_decl -> modifier type ID found_method_type LPAREN formals RPAREN block
Rule 32    found_method_type -> <empty>
Rule 33    constructor_decl -> modifier ID LPAREN formals RPAREN block
Rule 34    formals -> formal_param additional_formal_params
Rule 35    formals -> empty
Rule 36    formal_param -> type variable
Rule 37    additional_formal_params -> COMMA formal_param additional_formal_params
Rule 38    additional_formal_params -> empty
Rule 39    block -> LCURLY new_scope stmt_section RCURLY
Rule 40    new_scope -> <empty>
Rule 41    stmt_section -> stmt stmt_section
Rule 42    stmt_section -> empty
Rule 43    stmt -> if_stmt
Rule 44    stmt -> while_stmt
Rule 45    stmt -> for_stmt
Rule 46    stmt -> return_stmt
Rule 47    stmt -> stmt_expr SEMICOLON
Rule 48    stmt -> BREAK SEMICOLON
Rule 49    stmt -> CONTINUE SEMICOLON
Rule 50    stmt -> block
Rule 51    stmt -> var_decl
Rule 52    stmt -> SEMICOLON
Rule 53    if_stmt -> IF LPAREN expr RPAREN stmt else_stmt
Rule 54    else_stmt -> ELSE stmt
Rule 55    else_stmt -> empty
Rule 56    while_stmt -> WHILE LPAREN expr RPAREN stmt
Rule 57    for_stmt -> FOR LPAREN optional_stmt_expr SEMICOLON optional_expr SEMICOLON optional_stmt_expr RPAREN stmt
Rule 58    return_stmt -> RETURN optional_expr SEMICOLON
Rule 59    optional_stmt_expr -> stmt_expr
Rule 60    optional_stmt_expr -> empty
Rule 61    optional_expr -> expr
Rule 62    optional_expr -> empty
Rule 63    stmt_expr -> assign_expr
Rule 64    stmt_expr -> method_invocation
Rule 65    expr -> primary_expr
Rule 66    expr -> assign_expr
Rule 67    expr -> arith_expr
Rule 68    expr -> bool_expr
Rule 69    expr -> unary_expr
Rule 70    primary_expr -> literal
Rule 71    primary_expr -> THIS
Rule 72    primary_expr -> SUPER
Rule 73    primary_expr -> LPAREN expr RPAREN
Rule 74    primary_expr -> new_object
Rule 75    primary_expr -> left_hand_side
Rule 76    primary_expr -> method_invocation
Rule 77    literal -> INT_CONST
Rule 78    literal -> FLOAT_CONST
Rule 79    literal -> STRING
Rule 80    literal -> NULL
Rule 81    literal -> TRUE
Rule 82    literal -> FALSE
Rule 83    new_object -> NEW ID LPAREN arguments RPAREN
Rule 84    left_hand_side -> field_access
Rule 85    field_access -> primary_expr DOT ID
Rule 86    field_access -> ID
Rule 87    method_invocation -> primary_expr DOT ID LPAREN arguments RPAREN
Rule 88    arguments -> expr additional_exprs
Rule 89    arguments -> empty
Rule 90    additional_exprs -> COMMA expr additional_exprs
Rule 91    additional_exprs -> empty
Rule 92    assign_expr -> left_hand_side ASSIGN_OP expr
Rule 93    assign_expr -> left_hand_side INCREMENT
Rule 94    assign_expr -> INCREMENT left_hand_side
Rule 95    assign_expr -> left_hand_side DECREMENT
Rule 96    assign_expr -> DECREMENT left_hand_side
Rule 97    arith_expr -> expr PLUS expr
Rule 98    arith_expr -> expr MINUS expr
Rule 99    arith_expr -> expr MULTIPLY expr
Rule 100   arith_expr -> expr DIVIDE expr
Rule 101   bool_expr -> expr AND expr
Rule 102   bool_expr -> expr OR expr
Rule 103   bool_expr -> expr EQUAL_TO expr
Rule 104   bool_expr -> expr NOT_EQUAL_TO expr
Rule 105   bool_expr -> expr LESS_THAN expr
Rule 106   bool_expr -> expr GREATER_THAN expr
Rule 107   bool_expr -> expr LESS_OR_EQUAL_TO expr
Rule 108   bool_expr -> expr GREATER_OR_EQUAL_TO expr
Rule 109   unary_expr -> PLUS expr
Rule 110   unary_expr -> MINUS expr
Rule 111   unary_expr -> NEGATION expr

Terminals, with rules where they appear

AND                  : 101
ASSIGN_OP            : 92
BOOLEAN              : 23
BREAK                : 48
CLASS                : 4
COMMA                : 29 37 90
COMMENT              : 
CONTINUE             : 49
DECREMENT            : 95 96
DIVIDE               : 100
DO                   : 
DOT                  : 85 87
ELSE                 : 54
EQUAL_TO             : 103
EXTENDS              : 6
FALSE                : 82
FLOAT                : 22
FLOAT_CONST          : 78
FOR                  : 57
GREATER_OR_EQUAL_TO  : 108
GREATER_THAN         : 106
ID                   : 4 6 26 28 31 33 83 85 86 87
IF                   : 53
INCREMENT            : 93 94
INT                  : 21
INT_CONST            : 77
LCURLY               : 4 39
LESS_OR_EQUAL_TO     : 107
LESS_THAN            : 105
LPAREN               : 31 33 53 56 57 73 83 87
MINUS                : 98 110
MULTIPLY             : 99
NEGATION             : 111
NEW                  : 83
NOT_EQUAL_TO         : 104
NULL                 : 25 80
OR                   : 102
PLUS                 : 97 109
PRIVATE              : 16
PUBLIC               : 15
RCURLY               : 4 39
RETURN               : 58
RPAREN               : 31 33 53 56 57 73 83 87
SEMICOLON            : 20 47 48 49 52 57 57 58
STATIC               : 18
STRING               : 79
SUPER                : 72
THIS                 : 71
TRUE                 : 81
VOID                 : 24
WHILE                : 56
error                : 

Nonterminals, with rules where they appear

additional_exprs     : 88 90
additional_formal_params : 34 37
additional_vars      : 27 29
arguments            : 83 87
arith_expr           : 67
assign_expr          : 63 66
block                : 31 33 50
bool_expr            : 68
class_body_decl      : 4 8
class_body_decl_type : 8 9
class_decl           : 1
constructor_decl     : 12
else_stmt            : 53
empty                : 2 7 17 19 30 35 38 42 55 60 62 89 91
expr                 : 53 56 61 73 88 90 92 97 97 98 98 99 99 100 100 101 101 102 102 103 103 104 104 105 105 106 106 107 107 108 108 109 110 111
extends_class        : 4
field_access         : 84
field_decl           : 10
for_stmt             : 45
formal_param         : 34 37
formals              : 31 33
found_class_name     : 4
found_method_type    : 31
if_stmt              : 43
left_hand_side       : 75 92 93 94 95 96
literal              : 70
method_decl          : 11
method_invocation    : 64 76
modifier             : 13 31 33
new_object           : 74
new_scope            : 39
optional_expr        : 57 58
optional_static      : 14
optional_stmt_expr   : 57 57
primary_expr         : 65 85 87
program              : 1 0
return_stmt          : 46
stmt                 : 41 53 54 56 57
stmt_expr            : 47 59
stmt_section         : 39 41
type                 : 20 31 36
unary_expr           : 69
var_decl             : 13 51
variable             : 27 29 36
variables            : 20
visibility           : 14
while_stmt           : 44

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . class_decl program
    (2) program -> . empty
    (4) class_decl -> . CLASS ID found_class_name extends_class LCURLY class_body_decl RCURLY
    (3) empty -> .

    CLASS           shift and go to state 4
    $end            reduce using rule 3 (empty -> .)

    program                        shift and go to state 1
    class_decl                     shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> class_decl . program
    (1) program -> . class_decl program
    (2) program -> . empty
    (4) class_decl -> . CLASS ID found_class_name extends_class LCURLY class_body_decl RCURLY
    (3) empty -> .

    CLASS           shift and go to state 4
    $end            reduce using rule 3 (empty -> .)

    class_decl                     shift and go to state 2
    program                        shift and go to state 5
    empty                          shift and go to state 3

state 3

    (2) program -> empty .

    $end            reduce using rule 2 (program -> empty .)


state 4

    (4) class_decl -> CLASS . ID found_class_name extends_class LCURLY class_body_decl RCURLY

    ID              shift and go to state 6


state 5

    (1) program -> class_decl program .

    $end            reduce using rule 1 (program -> class_decl program .)


state 6

    (4) class_decl -> CLASS ID . found_class_name extends_class LCURLY class_body_decl RCURLY
    (5) found_class_name -> .

    EXTENDS         reduce using rule 5 (found_class_name -> .)
    LCURLY          reduce using rule 5 (found_class_name -> .)

    found_class_name               shift and go to state 7

state 7

    (4) class_decl -> CLASS ID found_class_name . extends_class LCURLY class_body_decl RCURLY
    (6) extends_class -> . EXTENDS ID
    (7) extends_class -> . empty
    (3) empty -> .

    EXTENDS         shift and go to state 9
    LCURLY          reduce using rule 3 (empty -> .)

    extends_class                  shift and go to state 8
    empty                          shift and go to state 10

state 8

    (4) class_decl -> CLASS ID found_class_name extends_class . LCURLY class_body_decl RCURLY

    LCURLY          shift and go to state 11


state 9

    (6) extends_class -> EXTENDS . ID

    ID              shift and go to state 12


state 10

    (7) extends_class -> empty .

    LCURLY          reduce using rule 7 (extends_class -> empty .)


state 11

    (4) class_decl -> CLASS ID found_class_name extends_class LCURLY . class_body_decl RCURLY
    (8) class_body_decl -> . class_body_decl_type class_body_decl
    (9) class_body_decl -> . class_body_decl_type
    (10) class_body_decl_type -> . field_decl
    (11) class_body_decl_type -> . method_decl
    (12) class_body_decl_type -> . constructor_decl
    (13) field_decl -> . modifier var_decl
    (31) method_decl -> . modifier type ID found_method_type LPAREN formals RPAREN block
    (33) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (14) modifier -> . visibility optional_static
    (15) visibility -> . PUBLIC
    (16) visibility -> . PRIVATE
    (17) visibility -> . empty
    (3) empty -> .

    PUBLIC          shift and go to state 20
    PRIVATE         shift and go to state 21
    STATIC          reduce using rule 3 (empty -> .)
    ID              reduce using rule 3 (empty -> .)
    INT             reduce using rule 3 (empty -> .)
    FLOAT           reduce using rule 3 (empty -> .)
    BOOLEAN         reduce using rule 3 (empty -> .)
    VOID            reduce using rule 3 (empty -> .)
    NULL            reduce using rule 3 (empty -> .)

    class_body_decl                shift and go to state 13
    class_body_decl_type           shift and go to state 14
    field_decl                     shift and go to state 15
    method_decl                    shift and go to state 16
    constructor_decl               shift and go to state 17
    modifier                       shift and go to state 18
    visibility                     shift and go to state 19
    empty                          shift and go to state 22

state 12

    (6) extends_class -> EXTENDS ID .

    LCURLY          reduce using rule 6 (extends_class -> EXTENDS ID .)


state 13

    (4) class_decl -> CLASS ID found_class_name extends_class LCURLY class_body_decl . RCURLY

    RCURLY          shift and go to state 23


state 14

    (8) class_body_decl -> class_body_decl_type . class_body_decl
    (9) class_body_decl -> class_body_decl_type .
    (8) class_body_decl -> . class_body_decl_type class_body_decl
    (9) class_body_decl -> . class_body_decl_type
    (10) class_body_decl_type -> . field_decl
    (11) class_body_decl_type -> . method_decl
    (12) class_body_decl_type -> . constructor_decl
    (13) field_decl -> . modifier var_decl
    (31) method_decl -> . modifier type ID found_method_type LPAREN formals RPAREN block
    (33) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (14) modifier -> . visibility optional_static
    (15) visibility -> . PUBLIC
    (16) visibility -> . PRIVATE
    (17) visibility -> . empty
    (3) empty -> .

    RCURLY          reduce using rule 9 (class_body_decl -> class_body_decl_type .)
    PUBLIC          shift and go to state 20
    PRIVATE         shift and go to state 21
    STATIC          reduce using rule 3 (empty -> .)
    ID              reduce using rule 3 (empty -> .)
    INT             reduce using rule 3 (empty -> .)
    FLOAT           reduce using rule 3 (empty -> .)
    BOOLEAN         reduce using rule 3 (empty -> .)
    VOID            reduce using rule 3 (empty -> .)
    NULL            reduce using rule 3 (empty -> .)

    class_body_decl_type           shift and go to state 14
    class_body_decl                shift and go to state 24
    field_decl                     shift and go to state 15
    method_decl                    shift and go to state 16
    constructor_decl               shift and go to state 17
    modifier                       shift and go to state 18
    visibility                     shift and go to state 19
    empty                          shift and go to state 22

state 15

    (10) class_body_decl_type -> field_decl .

    PUBLIC          reduce using rule 10 (class_body_decl_type -> field_decl .)
    PRIVATE         reduce using rule 10 (class_body_decl_type -> field_decl .)
    ID              reduce using rule 10 (class_body_decl_type -> field_decl .)
    INT             reduce using rule 10 (class_body_decl_type -> field_decl .)
    FLOAT           reduce using rule 10 (class_body_decl_type -> field_decl .)
    BOOLEAN         reduce using rule 10 (class_body_decl_type -> field_decl .)
    VOID            reduce using rule 10 (class_body_decl_type -> field_decl .)
    NULL            reduce using rule 10 (class_body_decl_type -> field_decl .)
    STATIC          reduce using rule 10 (class_body_decl_type -> field_decl .)
    RCURLY          reduce using rule 10 (class_body_decl_type -> field_decl .)


state 16

    (11) class_body_decl_type -> method_decl .

    PUBLIC          reduce using rule 11 (class_body_decl_type -> method_decl .)
    PRIVATE         reduce using rule 11 (class_body_decl_type -> method_decl .)
    ID              reduce using rule 11 (class_body_decl_type -> method_decl .)
    INT             reduce using rule 11 (class_body_decl_type -> method_decl .)
    FLOAT           reduce using rule 11 (class_body_decl_type -> method_decl .)
    BOOLEAN         reduce using rule 11 (class_body_decl_type -> method_decl .)
    VOID            reduce using rule 11 (class_body_decl_type -> method_decl .)
    NULL            reduce using rule 11 (class_body_decl_type -> method_decl .)
    STATIC          reduce using rule 11 (class_body_decl_type -> method_decl .)
    RCURLY          reduce using rule 11 (class_body_decl_type -> method_decl .)


state 17

    (12) class_body_decl_type -> constructor_decl .

    PUBLIC          reduce using rule 12 (class_body_decl_type -> constructor_decl .)
    PRIVATE         reduce using rule 12 (class_body_decl_type -> constructor_decl .)
    ID              reduce using rule 12 (class_body_decl_type -> constructor_decl .)
    INT             reduce using rule 12 (class_body_decl_type -> constructor_decl .)
    FLOAT           reduce using rule 12 (class_body_decl_type -> constructor_decl .)
    BOOLEAN         reduce using rule 12 (class_body_decl_type -> constructor_decl .)
    VOID            reduce using rule 12 (class_body_decl_type -> constructor_decl .)
    NULL            reduce using rule 12 (class_body_decl_type -> constructor_decl .)
    STATIC          reduce using rule 12 (class_body_decl_type -> constructor_decl .)
    RCURLY          reduce using rule 12 (class_body_decl_type -> constructor_decl .)


state 18

    (13) field_decl -> modifier . var_decl
    (31) method_decl -> modifier . type ID found_method_type LPAREN formals RPAREN block
    (33) constructor_decl -> modifier . ID LPAREN formals RPAREN block
    (20) var_decl -> . type variables SEMICOLON
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . BOOLEAN
    (24) type -> . VOID
    (25) type -> . NULL
    (26) type -> . ID

    ID              shift and go to state 27
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    BOOLEAN         shift and go to state 30
    VOID            shift and go to state 31
    NULL            shift and go to state 32

    var_decl                       shift and go to state 25
    type                           shift and go to state 26

state 19

    (14) modifier -> visibility . optional_static
    (18) optional_static -> . STATIC
    (19) optional_static -> . empty
    (3) empty -> .

    STATIC          shift and go to state 34
    ID              reduce using rule 3 (empty -> .)
    INT             reduce using rule 3 (empty -> .)
    FLOAT           reduce using rule 3 (empty -> .)
    BOOLEAN         reduce using rule 3 (empty -> .)
    VOID            reduce using rule 3 (empty -> .)
    NULL            reduce using rule 3 (empty -> .)

    optional_static                shift and go to state 33
    empty                          shift and go to state 35

state 20

    (15) visibility -> PUBLIC .

    STATIC          reduce using rule 15 (visibility -> PUBLIC .)
    ID              reduce using rule 15 (visibility -> PUBLIC .)
    INT             reduce using rule 15 (visibility -> PUBLIC .)
    FLOAT           reduce using rule 15 (visibility -> PUBLIC .)
    BOOLEAN         reduce using rule 15 (visibility -> PUBLIC .)
    VOID            reduce using rule 15 (visibility -> PUBLIC .)
    NULL            reduce using rule 15 (visibility -> PUBLIC .)


state 21

    (16) visibility -> PRIVATE .

    STATIC          reduce using rule 16 (visibility -> PRIVATE .)
    ID              reduce using rule 16 (visibility -> PRIVATE .)
    INT             reduce using rule 16 (visibility -> PRIVATE .)
    FLOAT           reduce using rule 16 (visibility -> PRIVATE .)
    BOOLEAN         reduce using rule 16 (visibility -> PRIVATE .)
    VOID            reduce using rule 16 (visibility -> PRIVATE .)
    NULL            reduce using rule 16 (visibility -> PRIVATE .)


state 22

    (17) visibility -> empty .

    STATIC          reduce using rule 17 (visibility -> empty .)
    ID              reduce using rule 17 (visibility -> empty .)
    INT             reduce using rule 17 (visibility -> empty .)
    FLOAT           reduce using rule 17 (visibility -> empty .)
    BOOLEAN         reduce using rule 17 (visibility -> empty .)
    VOID            reduce using rule 17 (visibility -> empty .)
    NULL            reduce using rule 17 (visibility -> empty .)


state 23

    (4) class_decl -> CLASS ID found_class_name extends_class LCURLY class_body_decl RCURLY .

    CLASS           reduce using rule 4 (class_decl -> CLASS ID found_class_name extends_class LCURLY class_body_decl RCURLY .)
    $end            reduce using rule 4 (class_decl -> CLASS ID found_class_name extends_class LCURLY class_body_decl RCURLY .)


state 24

    (8) class_body_decl -> class_body_decl_type class_body_decl .

    RCURLY          reduce using rule 8 (class_body_decl -> class_body_decl_type class_body_decl .)


state 25

    (13) field_decl -> modifier var_decl .

    PUBLIC          reduce using rule 13 (field_decl -> modifier var_decl .)
    PRIVATE         reduce using rule 13 (field_decl -> modifier var_decl .)
    ID              reduce using rule 13 (field_decl -> modifier var_decl .)
    INT             reduce using rule 13 (field_decl -> modifier var_decl .)
    FLOAT           reduce using rule 13 (field_decl -> modifier var_decl .)
    BOOLEAN         reduce using rule 13 (field_decl -> modifier var_decl .)
    VOID            reduce using rule 13 (field_decl -> modifier var_decl .)
    NULL            reduce using rule 13 (field_decl -> modifier var_decl .)
    STATIC          reduce using rule 13 (field_decl -> modifier var_decl .)
    RCURLY          reduce using rule 13 (field_decl -> modifier var_decl .)


state 26

    (31) method_decl -> modifier type . ID found_method_type LPAREN formals RPAREN block
    (20) var_decl -> type . variables SEMICOLON
    (27) variables -> . variable additional_vars
    (28) variable -> . ID

    ID              shift and go to state 36

    variables                      shift and go to state 37
    variable                       shift and go to state 38

state 27

    (33) constructor_decl -> modifier ID . LPAREN formals RPAREN block
    (26) type -> ID .

    LPAREN          shift and go to state 39
    ID              reduce using rule 26 (type -> ID .)


state 28

    (21) type -> INT .

    ID              reduce using rule 21 (type -> INT .)


state 29

    (22) type -> FLOAT .

    ID              reduce using rule 22 (type -> FLOAT .)


state 30

    (23) type -> BOOLEAN .

    ID              reduce using rule 23 (type -> BOOLEAN .)


state 31

    (24) type -> VOID .

    ID              reduce using rule 24 (type -> VOID .)


state 32

    (25) type -> NULL .

    ID              reduce using rule 25 (type -> NULL .)


state 33

    (14) modifier -> visibility optional_static .

    ID              reduce using rule 14 (modifier -> visibility optional_static .)
    INT             reduce using rule 14 (modifier -> visibility optional_static .)
    FLOAT           reduce using rule 14 (modifier -> visibility optional_static .)
    BOOLEAN         reduce using rule 14 (modifier -> visibility optional_static .)
    VOID            reduce using rule 14 (modifier -> visibility optional_static .)
    NULL            reduce using rule 14 (modifier -> visibility optional_static .)


state 34

    (18) optional_static -> STATIC .

    ID              reduce using rule 18 (optional_static -> STATIC .)
    INT             reduce using rule 18 (optional_static -> STATIC .)
    FLOAT           reduce using rule 18 (optional_static -> STATIC .)
    BOOLEAN         reduce using rule 18 (optional_static -> STATIC .)
    VOID            reduce using rule 18 (optional_static -> STATIC .)
    NULL            reduce using rule 18 (optional_static -> STATIC .)


state 35

    (19) optional_static -> empty .

    ID              reduce using rule 19 (optional_static -> empty .)
    INT             reduce using rule 19 (optional_static -> empty .)
    FLOAT           reduce using rule 19 (optional_static -> empty .)
    BOOLEAN         reduce using rule 19 (optional_static -> empty .)
    VOID            reduce using rule 19 (optional_static -> empty .)
    NULL            reduce using rule 19 (optional_static -> empty .)


state 36

    (31) method_decl -> modifier type ID . found_method_type LPAREN formals RPAREN block
    (28) variable -> ID .
    (32) found_method_type -> .

    COMMA           reduce using rule 28 (variable -> ID .)
    SEMICOLON       reduce using rule 28 (variable -> ID .)
    LPAREN          reduce using rule 32 (found_method_type -> .)

    found_method_type              shift and go to state 40

state 37

    (20) var_decl -> type variables . SEMICOLON

    SEMICOLON       shift and go to state 41


state 38

    (27) variables -> variable . additional_vars
    (29) additional_vars -> . COMMA variable additional_vars
    (30) additional_vars -> . empty
    (3) empty -> .

    COMMA           shift and go to state 43
    SEMICOLON       reduce using rule 3 (empty -> .)

    additional_vars                shift and go to state 42
    empty                          shift and go to state 44

state 39

    (33) constructor_decl -> modifier ID LPAREN . formals RPAREN block
    (34) formals -> . formal_param additional_formal_params
    (35) formals -> . empty
    (36) formal_param -> . type variable
    (3) empty -> .
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . BOOLEAN
    (24) type -> . VOID
    (25) type -> . NULL
    (26) type -> . ID

    RPAREN          reduce using rule 3 (empty -> .)
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    BOOLEAN         shift and go to state 30
    VOID            shift and go to state 31
    NULL            shift and go to state 32
    ID              shift and go to state 45

    formals                        shift and go to state 46
    formal_param                   shift and go to state 47
    empty                          shift and go to state 48
    type                           shift and go to state 49

state 40

    (31) method_decl -> modifier type ID found_method_type . LPAREN formals RPAREN block

    LPAREN          shift and go to state 50


state 41

    (20) var_decl -> type variables SEMICOLON .

    PUBLIC          reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    PRIVATE         reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    ID              reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    INT             reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    FLOAT           reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    BOOLEAN         reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    VOID            reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    NULL            reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    STATIC          reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    RCURLY          reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    BREAK           reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    CONTINUE        reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    SEMICOLON       reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    IF              reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    WHILE           reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    FOR             reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    RETURN          reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    LCURLY          reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    INCREMENT       reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    DECREMENT       reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    THIS            reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    SUPER           reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    LPAREN          reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    INT_CONST       reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    FLOAT_CONST     reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    STRING          reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    TRUE            reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    FALSE           reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    NEW             reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    ELSE            reduce using rule 20 (var_decl -> type variables SEMICOLON .)


state 42

    (27) variables -> variable additional_vars .

    SEMICOLON       reduce using rule 27 (variables -> variable additional_vars .)


state 43

    (29) additional_vars -> COMMA . variable additional_vars
    (28) variable -> . ID

    ID              shift and go to state 52

    variable                       shift and go to state 51

state 44

    (30) additional_vars -> empty .

    SEMICOLON       reduce using rule 30 (additional_vars -> empty .)


state 45

    (26) type -> ID .

    ID              reduce using rule 26 (type -> ID .)


state 46

    (33) constructor_decl -> modifier ID LPAREN formals . RPAREN block

    RPAREN          shift and go to state 53


state 47

    (34) formals -> formal_param . additional_formal_params
    (37) additional_formal_params -> . COMMA formal_param additional_formal_params
    (38) additional_formal_params -> . empty
    (3) empty -> .

    COMMA           shift and go to state 55
    RPAREN          reduce using rule 3 (empty -> .)

    additional_formal_params       shift and go to state 54
    empty                          shift and go to state 56

state 48

    (35) formals -> empty .

    RPAREN          reduce using rule 35 (formals -> empty .)


state 49

    (36) formal_param -> type . variable
    (28) variable -> . ID

    ID              shift and go to state 52

    variable                       shift and go to state 57

state 50

    (31) method_decl -> modifier type ID found_method_type LPAREN . formals RPAREN block
    (34) formals -> . formal_param additional_formal_params
    (35) formals -> . empty
    (36) formal_param -> . type variable
    (3) empty -> .
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . BOOLEAN
    (24) type -> . VOID
    (25) type -> . NULL
    (26) type -> . ID

    RPAREN          reduce using rule 3 (empty -> .)
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    BOOLEAN         shift and go to state 30
    VOID            shift and go to state 31
    NULL            shift and go to state 32
    ID              shift and go to state 45

    type                           shift and go to state 49
    formals                        shift and go to state 58
    formal_param                   shift and go to state 47
    empty                          shift and go to state 48

state 51

    (29) additional_vars -> COMMA variable . additional_vars
    (29) additional_vars -> . COMMA variable additional_vars
    (30) additional_vars -> . empty
    (3) empty -> .

    COMMA           shift and go to state 43
    SEMICOLON       reduce using rule 3 (empty -> .)

    additional_vars                shift and go to state 59
    empty                          shift and go to state 44

state 52

    (28) variable -> ID .

    COMMA           reduce using rule 28 (variable -> ID .)
    SEMICOLON       reduce using rule 28 (variable -> ID .)
    RPAREN          reduce using rule 28 (variable -> ID .)


state 53

    (33) constructor_decl -> modifier ID LPAREN formals RPAREN . block
    (39) block -> . LCURLY new_scope stmt_section RCURLY

    LCURLY          shift and go to state 61

    block                          shift and go to state 60

state 54

    (34) formals -> formal_param additional_formal_params .

    RPAREN          reduce using rule 34 (formals -> formal_param additional_formal_params .)


state 55

    (37) additional_formal_params -> COMMA . formal_param additional_formal_params
    (36) formal_param -> . type variable
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . BOOLEAN
    (24) type -> . VOID
    (25) type -> . NULL
    (26) type -> . ID

    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    BOOLEAN         shift and go to state 30
    VOID            shift and go to state 31
    NULL            shift and go to state 32
    ID              shift and go to state 45

    formal_param                   shift and go to state 62
    type                           shift and go to state 49

state 56

    (38) additional_formal_params -> empty .

    RPAREN          reduce using rule 38 (additional_formal_params -> empty .)


state 57

    (36) formal_param -> type variable .

    COMMA           reduce using rule 36 (formal_param -> type variable .)
    RPAREN          reduce using rule 36 (formal_param -> type variable .)


state 58

    (31) method_decl -> modifier type ID found_method_type LPAREN formals . RPAREN block

    RPAREN          shift and go to state 63


state 59

    (29) additional_vars -> COMMA variable additional_vars .

    SEMICOLON       reduce using rule 29 (additional_vars -> COMMA variable additional_vars .)


state 60

    (33) constructor_decl -> modifier ID LPAREN formals RPAREN block .

    PUBLIC          reduce using rule 33 (constructor_decl -> modifier ID LPAREN formals RPAREN block .)
    PRIVATE         reduce using rule 33 (constructor_decl -> modifier ID LPAREN formals RPAREN block .)
    ID              reduce using rule 33 (constructor_decl -> modifier ID LPAREN formals RPAREN block .)
    INT             reduce using rule 33 (constructor_decl -> modifier ID LPAREN formals RPAREN block .)
    FLOAT           reduce using rule 33 (constructor_decl -> modifier ID LPAREN formals RPAREN block .)
    BOOLEAN         reduce using rule 33 (constructor_decl -> modifier ID LPAREN formals RPAREN block .)
    VOID            reduce using rule 33 (constructor_decl -> modifier ID LPAREN formals RPAREN block .)
    NULL            reduce using rule 33 (constructor_decl -> modifier ID LPAREN formals RPAREN block .)
    STATIC          reduce using rule 33 (constructor_decl -> modifier ID LPAREN formals RPAREN block .)
    RCURLY          reduce using rule 33 (constructor_decl -> modifier ID LPAREN formals RPAREN block .)


state 61

    (39) block -> LCURLY . new_scope stmt_section RCURLY
    (40) new_scope -> .

    BREAK           reduce using rule 40 (new_scope -> .)
    CONTINUE        reduce using rule 40 (new_scope -> .)
    SEMICOLON       reduce using rule 40 (new_scope -> .)
    IF              reduce using rule 40 (new_scope -> .)
    WHILE           reduce using rule 40 (new_scope -> .)
    FOR             reduce using rule 40 (new_scope -> .)
    RETURN          reduce using rule 40 (new_scope -> .)
    LCURLY          reduce using rule 40 (new_scope -> .)
    INCREMENT       reduce using rule 40 (new_scope -> .)
    DECREMENT       reduce using rule 40 (new_scope -> .)
    INT             reduce using rule 40 (new_scope -> .)
    FLOAT           reduce using rule 40 (new_scope -> .)
    BOOLEAN         reduce using rule 40 (new_scope -> .)
    VOID            reduce using rule 40 (new_scope -> .)
    NULL            reduce using rule 40 (new_scope -> .)
    ID              reduce using rule 40 (new_scope -> .)
    THIS            reduce using rule 40 (new_scope -> .)
    SUPER           reduce using rule 40 (new_scope -> .)
    LPAREN          reduce using rule 40 (new_scope -> .)
    INT_CONST       reduce using rule 40 (new_scope -> .)
    FLOAT_CONST     reduce using rule 40 (new_scope -> .)
    STRING          reduce using rule 40 (new_scope -> .)
    TRUE            reduce using rule 40 (new_scope -> .)
    FALSE           reduce using rule 40 (new_scope -> .)
    NEW             reduce using rule 40 (new_scope -> .)
    RCURLY          reduce using rule 40 (new_scope -> .)

    new_scope                      shift and go to state 64

state 62
